--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -48,7 +48,7 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-uppercase fw-bold" style="font-size: 40px;color: var(--bs-white);font-family: Montserrat, sans-serif;text-align: center;margin-top: 30px;">01 May 2023&nbsp;</h2>
+                        <h2 class="text-uppercase fw-bold" style="font-size: 50px;color: var(--bs-white);font-family: Montserrat, sans-serif;text-align: center;margin-top: 30px;">10 May 2023&nbsp;</h2>
                         <div class="row" style="margin-top: 25px;margin-right: 0px;margin-left: 0px;">
                             <div class="col-lg-12"><a class="btn btn-primary btn-lg" role="button" style="background: linear-gradient(-50deg, var(--bs-blue), var(--bs-purple)), var(--bs-indigo);font-weight: bold;font-size: 30px;font-family: Montserrat, sans-serif;display: block;margin-right: auto;margin-left: auto;width: 150px;margin-bottom: 20px; cursor:text;">5-8PM</a></div>
                             <div class="col"><a class="btn btn-outline-primary btn-lg" role="button" style="font-size: 30px;font-weight: bold;color: var(--bs-warning);font-family: Montserrat, sans-serif;border: 2px dashed var(--bs-yellow);display: block;margin-right: auto;margin-left: auto;width: 200px;margin-top: 0px; cursor:text;">3 Hours</a></div>
@@ -66,7 +66,7 @@
     <!-- Start: ♣ Countdown BS4 ♣ -->
     <section class="text-white" style="background: #212121;padding-top: 0px;">
         <!-- Start: Big countdown -->
-        <div class="container text-center boxed-countdown" data-countdown="05/01/2023 17:00:00" style="border-color: var(--bs-blue);background: #212121;">
+        <div class="container text-center boxed-countdown" data-countdown="05/10/2023 17:00:00" style="border-color: var(--bs-blue);background: #212121;">
             <div class="row" style="margin-right: 0px;margin-left: -12px;">
                 <!-- Start: Days -->
                 <div class="col-6 col-md-3 mt-3">
@@ -254,20 +254,23 @@
     </div>
     <div class="container">
         <h1 style="text-align: center;font-size: 40px;margin-top: 65px;padding-right: 20px;padding-left: 20px;color: var(--bs-yellow);">Don't Believe...?</h1>
-        <h1 style="text-align: center;font-size: 20px;padding: 0 20px;margin-top: 20px;">Have A Look At The Results We Have Brought For Our Students after this masterclass</h1><!-- Start: Lightbox Gallery -->
+        <h1 style="text-align: center;font-size: 20px;padding: 0 20px;margin-top: 20px;">Have A Look At The Results We Have Brought For Our Students after this MasterClass (prev known as bootcamp)</h1><!-- Start: Lightbox Gallery -->
         <section class="py-4 py-xl-5">
             <div class="container">
                 <!-- Start: Photos -->
                 <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3" data-bss-baguettebox="">
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r1.png"><img class="img-fluid" style="object-fit:cover; width:100%; height:185px; object-position:0% 46%; margin:10px 10px;" src="https://hackersvilla.xyz/masterclass/assets/img/r1.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r1.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r1.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r2.png"><img class="img-fluid" style="object-fit:cover; width:100%; height:320px; object-position:0% 75%; margin:10px 10px;" src="https://hackersvilla.xyz/masterclass/assets/img/r2.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r2.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r2.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r3.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px;" src="https://hackersvilla.xyz/masterclass/assets/img/r3.png"></a></div>
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r4.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px;" src="https://hackersvilla.xyz/masterclass/assets/img/r4.png"></a></div>
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r5.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px;" src="https://hackersvilla.xyz/masterclass/assets/img/r5.png"></a></div>
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r6.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px;" src="https://hackersvilla.xyz/masterclass/assets/img/r6.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r3.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r3.png"></a></div>
+
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r4.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r4.png"></a></div>
+
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r5.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r5.png"></a></div>
+
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r6.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r6.png"></a></div>
                 </div><!-- End: Photos -->
             </div>
         </section><!-- End: Lightbox Gallery -->
@@ -359,7 +362,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-2" style="font-size: 20px;background: #313131;color: var(--bs-accordion-bg);">When and where is the masterclass and how long it would be?</button></h2>
                             <div id="content-accordion-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                <p class="accordion-body"> The 3 hour long Hack-n-Slash MasterClass presented by HackersVilla is scheduled at 5 PM to 8 PM on 1st of May, 2023 on Zoom Meetings. You can register now to avail your seat.</p>
+                                <p class="accordion-body"> The 3 hour long Hack-n-Slash MasterClass presented by HackersVilla is scheduled at 5 PM to 8 PM on 10th of May, 2023 on Zoom Meetings. You can register now to avail your seat.</p>
                             </div>
                         </div><!-- End: accordion-item -->
                         <!-- Start: accordion-item -->
