--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -97,7 +97,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 25px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://imjo.in/5rgP5g" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://uq4le3qju8x.typeform.com/to/qKh8bDJS" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -154,7 +154,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 0px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://imjo.in/5rgP5g" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://uq4le3qju8x.typeform.com/to/qKh8bDJS" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -227,7 +227,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to get all the Super Powers in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://imjo.in/5rgP5g" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://uq4le3qju8x.typeform.com/to/qKh8bDJS" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -283,7 +283,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 20px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to enroll now and learn with Sanchay Sir</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://imjo.in/5rgP5g" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://uq4le3qju8x.typeform.com/to/qKh8bDJS" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
         <h1 style="font-weight: bold;text-align: center;font-size: 40px;margin-top: 70px;padding-right: 20px;padding-left: 20px;color: var(--bs-yellow);">BUT WAIT!!!</h1>
@@ -340,7 +340,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://imjo.in/5rgP5g" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://uq4le3qju8x.typeform.com/to/qKh8bDJS" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -407,7 +407,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://imjo.in/5rgP5g" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="https://uq4le3qju8x.typeform.com/to/qKh8bDJS" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
