--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="assets/img/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="HackersVilla Cybersecurity | Learn Ethical Hacking Online" />
+    <meta property="og:description" content="HackersVilla is a professional cybersecurity training platform. Ab India Bolega - Cybersecurity as a Profession!" />
+    <meta property="og:image" content="https://hackersvilla.xyz/masterclass/assets/img/og_image.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_GB" />
+
+
 </head>
 
 
