--- a/masterclass/thanks.html
+++ b/masterclass/thanks.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Confirmation Page | Hack-n-Slash MasterClassx</title>
+        <title>Confirmation Page | Hack-n-Slash MasterClass</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -32,7 +32,7 @@
         </noscript>
         <!-- End Facebook Pixel Code -->
         
-        <meta property="og:title" content="Hack-n-Slash MasterClass | Learn Ethical Hacking Online" />
+        <meta property="og:title" content="Confirmation Page | Hack-n-Slash MasterClass" />
         <meta property="og:description" content="Discover the Smartest and the Simplest way to Hack any website or OS in 60 minutes. Register now and win bonuses worth ₹25000." />
         <meta property="og:image" content="https://hackersvilla.xyz/masterclass/assets/img/og_image.jpg" />
         <meta property="og:type" content="website" />
